# magika-burn

./: Cargo.toml  LICENSE.md  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml
benches/: inference.rs
scripts/: check.sh  update_vendor.sh
src/: config.rs  detection.rs  file.rs  lib.rs  model.rs  preprocess.rs  session.rs
tests/: magika_parity.rs  mod.rs
